[package]
name = "crypto-bench"
version = "0.1.0"
authors = ["luozijun <luozijun.assistant@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "./aes",
]

[dependencies]
ring        = "0.16"
openssl     = "0.10"
openssl-sys = "0.9"
libsodium-sys = "0.2"
# crypto2       = "0.1"
crypto2       = { git = "https://github.com/shadowsocks/crypto2", branch = "dev" }

# RustCrypto
aes              = "0.7"
aes-gcm          = "0.9"
ccm              = "0.4"
aes-gcm-siv      = "0.10"
aes-siv          = "0.6"
chacha20         = "0.8"
chacha20poly1305 = "0.9"

[patch.crates-io]
aes = { path = './aes' }
