[package]
name = "aes"
version = "0.6.0"
authors = ["luozijun <luozijun.assistant@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-soft = "0.6"

[target.'cfg(any(target_arch = "x86_64", target_arch = "x86"))'.dependencies]
aesni    = "0.10"
